added link to josh

--- a/poems.html
+++ b/poems.html
@@ -12,6 +12,7 @@
     <a href="blog.html">Blog</a>
     <a href="resources.html">Resources</a>
     <a href="contact.html">Contact</a>
+    <a href="josh.html"></a>
   </header>
 
   <h2>Poems</h2>
