--- a/josh.html
+++ b/josh.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Sofia-Jeanne Roggeveen</title>
+  <title>For Josh</title>
   <meta charset="UTF-8">
   <link href="style.css" rel="stylesheet">
 </head>
