--- a/josh.html
+++ b/josh.html
@@ -8,6 +8,11 @@
 <body>
   <header>
     <h2>Hey there! Glad you made it.</h2>
+    <p>I've made a birthday puzzle for you. Get started by deciphering the clue on this page and using your answer to access the next clue.</p>
+    <div id="clue">
+      <h3>CLUE:</h3>
+      <p>LIKE A SNOWFLAKE</p>
+    </div>
   </header>
 
 
