changed css reference

--- a/josh.html
+++ b/josh.html
@@ -3,7 +3,7 @@
 <head>
   <title>For Josh</title>
   <meta charset="UTF-8">
-  <link href="style.css" rel="stylesheet">
+  <link href="josh.css" rel="stylesheet">
 </head>
 <body>
   <header>
