add second page

--- a/josh.html
+++ b/josh.html
@@ -12,10 +12,12 @@
     <br></br>
     <div id="clue">
       <h3>CLUE:</h3>
-      <p>LIKE A SNOWFLAKE</p>
+      <p>I'm a type of snowflake</p>
+      <p>That garners Josh's disdain</p>
+      <p>but don't you dare call me a fake</p>
+      <p>or I will turn to rain.</p>
+
     </div>
   </header>
-
-
 </body>
 </html>
