--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="blog.html">Blog</a>
     <a href="resources.html">Resources</a>
     <a href="contact.html">Contact</a>
-    <a href="peoms.html">Poems</a>
+    <a href="poems.html">Poems</a>
   </header>
 
 
