--- a/special.html
+++ b/special.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <header>
-    <h2>Not too shabby. I think you're getting the hang of this. So let's mix it up. Use those brains to decipher what's virtual and what's real life.</h2>
-    <p></p>
+    <h2></h2>
+    <p>Not too shabby. I think you're getting the hang of this. So let's mix it up. Use those brains to decipher what's virtual and what's real life.</p>
     <br></br>
     <div id="clue">
       <h3>CLUE:</h3>
