--- a/josh.html
+++ b/josh.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h2>Hey there! Glad you made it.</h2>
+    <p>Hey there! Glad you made it.</p>
     <p>I've made a birthday puzzle for you. Get started by deciphering the clue on this page and using your answer to access the next clue.</p>
     <br></br>
     <div id="clue">
